[package]
name = "elephant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base64 = "0.22.0"
cocoa = "0.25.0"
core-foundation = "0.9.4"
core-graphics = "0.23.1"
foreign-types-shared = "0.3.1"
image = "0.25"
objc = "0.2.7"
reqwest = { version = "0.11.25", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
